# wacom-utils

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp  process.cpp  process.h  selection.cpp  selection.h  util.h  wacom.cpp  wacom.h
